# lgtm-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/lgtm_cli/: __init__.py  chart.py  cli.py  client.py  config.py
tests/fixtures/: histogram-result.json
